# senna

./: .gitignore  LICENSE  README.md  configuration.go  go.mod  go.sum  index.html  justfile  lcu.go  logger.go  main.go  model.go  package.json  preferences.go  preferences.json  riot.txt  session.go  tsconfig.json  vite.config.ts
asset/: asset.go
collection/: collection.go  itemset.go  runepage.go  skill.go  spell.go
docs/: index.html  riot.txt
filesystem/: filesystem.go
model/: api.go  datadragon.go  lcu.go  model.go  preferences.go
preferences/: preferences.go
settings/: settings.go
src/: App.vue  api.ts  assets.ts  format.ts  loading.ts  main.ts  router.ts  spells.ts  state.ts  style.css  toast.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: api.rs  lcu.rs  lib.rs  main.rs  settings.rs
src/components/: BuildPanels.vue  ChampAvatar.vue  ItemSetEditor.vue  LiveCockpit.vue  LiveMatchPanel.vue  LoadingPane.vue  LoadoutEditor.vue  PageHeading.vue  PlayerPanel.vue  RunePageEditor.vue  SkinGridPicker.vue  SpellPairPicker.vue  StatTile.vue  StatusPane.vue  TierBadge.vue  WinMeter.vue  WinSparkline.vue
src/components/ui/dialog/: DialogContent.vue  DialogDescription.vue  DialogTitle.vue
src/views/: AboutView.vue  ChampionView.vue  EventLogView.vue  HomeView.vue  MatchView.vue  MoversView.vue  PlayerView.vue  PreferencesView.vue  SettingsView.vue  TierView.vue
ui/: eventlog.go  home.go  preferences.go  settings.go  ui.go
